--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,40 @@
-td{
-	padding: 5px 10px;
+body{
+	max-width: 980px;
+	margin: auto;
+	padding: 0px 15px;
+}
+
+h1{
+	font-size: 40px;
+}
+
+.agreeText{
+	color: #006400;
+}
+
+.title{
+	text-align: center;
+	max-width: 400px;
+	margin: 15px auto 15px;
+	border-bottom: 1px solid rgb(175, 175, 175);
+}
+
+/*		grid		*/
+.grid-container{
+	display: grid;
+	grid-gap: 10px;
+	grid-template-areas: 'item-1 item-2';
+}
+
+.grid-main{
+	grid-area: 'main';
+	grid-column: 1 / 2;
+}
+
+.grid-item-1{
+	grid-area: 'item-1';
+}
+
+.grid-item-2{
+	grid-area: 'item-2';
 }
