--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,21 +2,64 @@ h1{
 	font-size: 40px;
 }
 
-.success{
-	color: #006400;
-}
-
-.inline{
-	display: inline-block;
-}
-
 .title{
 	text-align: center;
 	max-width: 400px;	
 	margin: 15px auto 15px;
 	border-bottom: 1px solid rgb(175, 175, 175);
 }
-/*0284a0ad08a5879f64099215f5577efbfe596b8a99b8386676c2c332037a0dd2*/
+
+.success{
+	color: #006400;
+}
+
+
+/* Style the tab */
+.tab {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+}
+
+/* Style the buttons that are used to open the tab content */
+.tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+    background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+    background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+}
+
+.tabcontent {
+    animation: fadeEffect 1s; /* Fading effect takes 1 second */
+}
+
+/* Go from zero to full opacity */
+@keyframes fadeEffect {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
 /*		grid		*/
 .grid-container{
 	display: grid;
