--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,9 +1,35 @@
+body{
+	max-width: 980px;
+	margin: auto;
+}
+
+.button {
+	padding: 5px 15px;
+	font-size: 17px;
+	text-align: center;
+	cursor: pointer;
+	outline: none;
+	color: #fff;
+	background-color: #4CAF50;
+	border: none;
+	border-radius: 3px;
+	box-shadow: 0 9px #999;
+  }
+  
+  .button:hover {background-color: #3e8e41}
+  
+  .button:active {
+	background-color: #3e8e41;
+	box-shadow: 0 5px #666;
+	transform: translateY(4px);
+  }
+
 h1{
 	font-size: 40px;
 }
 
 .title{
-	text-align: center;
+	text-align: center;	
 	max-width: 400px;	
 	margin: 15px auto 15px;
 	border-bottom: 1px solid rgb(175, 175, 175);
@@ -13,57 +39,61 @@ h1{
 	color: #006400;
 }
 
-
 /* Style the tab */
 .tab {
-    overflow: hidden;
-    border: 1px solid #ccc;
-    background-color: #f1f1f1;
+	overflow: hidden;
+	border: 1px solid #ccc;
+	background-color: #f1f1f1;
 }
 
 /* Style the buttons that are used to open the tab content */
 .tab button {
-    background-color: inherit;
-    float: left;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    padding: 14px 16px;
-    transition: 0.3s;
+	background-color: inherit;
+	float: left;
+	border: none;
+	outline: none;
+	cursor: pointer;
+	padding: 14px 16px;
+	transition: 0.3s;
 }
 
 /* Change background color of buttons on hover */
 .tab button:hover {
-    background-color: #ddd;
+	background-color: #ddd;
 }
 
 /* Create an active/current tablink class */
 .tab button.active {
-    background-color: #ccc;
+	background-color: #ccc;
 }
 
 /* Style the tab content */
 .tabcontent {
-    display: none;
-    padding: 6px 12px;
-    border: 1px solid #ccc;
-    border-top: none;
+	display: none;
+	padding: 6px 12px;
+	border: 1px solid #ccc;
+	border-top: none;
 }
 
 .tabcontent {
-    animation: fadeEffect 1s; /* Fading effect takes 1 second */
+	animation: fadeEffect 1s; /* Fading effect takes 1 second */
 }
 
 /* Go from zero to full opacity */
 @keyframes fadeEffect {
-    from {opacity: 0;}
-    to {opacity: 1;}
+	from {opacity: 0;}
+	to {opacity: 1;}
 }
 
-/*		grid		*/
-.grid-container{
+/*		grid-auth		*/
+.grid-auth{
 	display: grid;
-	max-width: 1000px;
+}
+
+
+/*		grid-interact		*/
+.grid-interact{
+	display: grid;
 	margin: auto;
 	grid-gap: 10px;
 	justify-content: center;
@@ -86,4 +116,8 @@ h1{
 
 .grid-balance{
 	grid-area: 'balance';
+}
+
+.hide{
+	display: none;
 }
