--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,28 @@
+
+/*		MAIN		*/
 body{
-	max-width: 980px;
+	max-width: 800px;
 	margin: auto;
+	font-size: 17px;
+}
+
+h1{
+	text-align: center;
+	margin: 30px 0px 15px;
+	font-size: 40px;
+}
+
+h3{
+	text-align: center;
+}
+
+input[type="text"]{
+	height: 30px;
+	font-size: 17px;
+	width: 70%;
+	margin: 10px auto;
+	padding-left: 10px;
+	outline: none;
 }
 
 .button {
@@ -13,33 +35,26 @@ body{
 	background-color: #4CAF50;
 	border: none;
 	border-radius: 3px;
-	box-shadow: 0 9px #999;
-  }
-  
-  .button:hover {background-color: #3e8e41}
-  
-  .button:active {
+	box-shadow: 0 5px #999;
+	margin-bottom: 5px;
+}
+
+.button:hover {background-color: #3e8e41}
+
+.button:active {
 	background-color: #3e8e41;
-	box-shadow: 0 5px #666;
+	box-shadow: 0 2px #666;
 	transform: translateY(4px);
-  }
-
-h1{
-	font-size: 40px;
 }
 
-.title{
-	text-align: center;	
-	max-width: 400px;	
-	margin: 15px auto 15px;
-	border-bottom: 1px solid rgb(175, 175, 175);
+.center{
+	margin: 10px auto;
 }
-
 .success{
 	color: #006400;
 }
 
-/* Style the tab */
+/*		 Style the tab 			*/
 .tab {
 	overflow: hidden;
 	border: 1px solid #ccc;
@@ -73,10 +88,11 @@ h1{
 	padding: 6px 12px;
 	border: 1px solid #ccc;
 	border-top: none;
+	animation: fadeEffect 1s; /* Fading effect takes 1 second */
 }
 
-.tabcontent {
-	animation: fadeEffect 1s; /* Fading effect takes 1 second */
+.tablinks{
+	width: 33.3%;
 }
 
 /* Go from zero to full opacity */
@@ -88,6 +104,16 @@ h1{
 /*		grid-auth		*/
 .grid-auth{
 	display: grid;
+	grid-gap: 15px;
+	grid-template-areas: 'singIn signUp';
+}
+
+.grid-signIn{
+	grid-area: 'sighIn';
+}
+
+.grid-signUp{
+	grid-area: 'sighUn';
 }
 
 
